deployments/mediacenter/traefik/1_jellyfin-ingress.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: mediacenter
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: jellyfin.gygax.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  jellyfin
                port:
                  number: 80
